# example-ops-template

./: .gitignore  .gitmodules  .lycheeignore  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  .yamlfix.toml  .yamllint  AGENTS.md  CLAUDE.md  README.md  comment1.md  opencode.json  payload1.json  payload2.json  pyproject.toml
.devcontainer/: apt-packages.txt  devcontainer.json  requirements.txt
.github/: AGENTS.md  CODEOWNERS  GITHUB-WORKFLOWS.md  ISSUE_EMOJI_REACTION_WORKFLOW.md  README.md  copilot-instructions.md  pre-commit-matcher.json  pull_request_template.md
.github/agents/: 4.1-Beast.agent.md  AGENTS.md  FIREWALL.md  Plan.agent.md  README.md  Thinking-Beast-Mode.agent.md  agent-architect.agent.md  code-tour.agent.md  cogni-ai-architect.agent.md  cogni-ai.agent.md  copilot-plus.agent.md  critical-thinking.agent.md  devops-expert.agent.md  github-actions-expert.agent.md  gpt-5-beast-mode.agent.md  memory-bank.agent.md  plan.agent.md  platform-sre-kubernetes.agent.md  prompt-builder.agent.md  prompt-engineer.agent.md  refine-issue.agent.md  research-technical-spike.agent.md  tech-debt-remediation-plan.agent.md  terraform-iac-reviewer.agent.md  terraform.agent.md  voidbeast-gpt41enhanced.agent.md
.github/instructions/: AGENTS.md  README.md  ansible.instructions.md  blog.instructions.md  github-workflows.instruction.md  json.instructions.md  markdown.instructions.md  readme.instructions.md  yaml.instructions.md
.github/prompts/: AGENTS.md  README.md  (+2 more)
.opencode/: opencode.jsonc
.tours/: README.md  getting-started.tour
(+52 files in other folders)
